apps/production/public-status-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-status-api
  namespace: public-status-api
spec:
  selector:
    app: public-status-api
  ports:
    - name: http
      port: 80
      targetPort: http
